feat: add paid sub request count [thont]